--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="javascript.js"></script>
+    <script src="javascript.js" defer></script>
 </head>
 <body>
-    
+    <button id="forRock">Rock</button>
+    <button id="forPaper">Paper</button>
+    <button id="forScissor">Scissor</button>
+    <hr>
+    <div id="result"></div>
+    <div id="score"></div>
 </body>
 </html>
